--- a/TeacherPortal/templates/teacherportal/attendance_summary.html
+++ b/TeacherPortal/templates/teacherportal/attendance_summary.html
@@ -82,7 +82,7 @@
                             $('#modalConfirm').modal('hide');
                             location.reload();
                         } else {
-                            alert(data.errormsg);
+                            alert('Something went wrong try again or contact system admin.s');
                         }
                     }
 
