--- a/TeacherPortal/templates/teacherportal/Index.html
+++ b/TeacherPortal/templates/teacherportal/Index.html
@@ -6,11 +6,11 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                <td>Room</td>
-                <td>Date</td>
-                <td>Begin time</td>
-                <td>End time</td>
-                <td>College</td>
+                <th>Room</th>
+                <th>Date</th>
+                <th>Begin time</th>
+                <th>End time</th>
+                <th>College</th>
             </tr>
             </thead>
             <tbody>
