--- a/TeacherPortal/templates/teacherportal/schedule.html
+++ b/TeacherPortal/templates/teacherportal/schedule.html
@@ -6,11 +6,11 @@
         <table class="table">
             <thead>
             <tr>
-                <td>Room</td>
-                <td>Date</td>
-                <td>Begin time</td>
-                <td>End time</td>
-                <td>College</td>
+                <th>Room</th>
+                <th>Date</th>
+                <th>Begin time</th>
+                <th>End time</th>
+                <th>College</th>
             </tr>
             </thead>
             <tbody>
@@ -31,11 +31,12 @@
         </table>
         <div class="col-12">
             {% if previous %}
-                <a class="btn btn-info btn-sm" href="">Previous</a>
+                <a class="btn btn-info btn-sm" href="/teacherportal/schedule/?page={{ previous }}">Previous</a>
             {% endif %}
             {% if next %}
-                <a class="btn btn-info btn-sm" href="/teacherportal/schedule" name="next">{{ next }}</a>
+                <a class="btn btn-info btn-sm" href="/teacherportal/schedule/?page={{ next }}">Next</a>
             {% endif %}
+
         </div>
     </div>
 {% endblock %}
