fixed attendance summary

--- a/TeacherPortal/templates/teacherportal/attendance_summary.html
+++ b/TeacherPortal/templates/teacherportal/attendance_summary.html
@@ -49,7 +49,7 @@
                 {% else %}
                     <tr class="table-danger" id="{{ attendee.student.student_nr }}">
                         <td id="studentNumber">{{ attendee.student.student_nr }}</td>
-                        <td>{{ attendee.student.name }}</td>
+                        <td>{{ attendee.stucent.name }}</td>
                         <td>{{ attendee.phone_check }}</td>
                         <td>{{ attendee.card_check }}</td>
                         <td>
