--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" href="{% url 'teacherportal-home' %}">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'today_schedule' %}">Today schedule</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>
                 </li>
             </ul>
