--- a/users/templates/users/teacher.html
+++ b/users/templates/users/teacher.html
@@ -31,7 +31,7 @@
         $("#editTeacher").click(function (e) {
             console.log('clicked');
             $.ajax({
-                url: "http://127.0.0.1:8000{% url 'teacher_edit' %}",
+                url: "{{ BASE_URL_W_TRAILING_SLASH }}{% url 'teacher_edit' %}",
                 success: function (data) {
                     console.log('This was a succes but the append went wrong')
                     $('#teacherSummary').html(data);
