--- a/TeacherPortal/templates/teacherportal/schedule.html
+++ b/TeacherPortal/templates/teacherportal/schedule.html
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="col-12">
-        <h2>Schedule page</h2>
+    <div class="pb-5">
+        <h3>Schedule page</h3>
+    </div>
         <table class="table">
             <thead>
             <tr>
