--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -25,35 +25,38 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'teacherportal-home' %}">Teacher portal</a>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'teacherportal-home' %}">Teacher portal</a>
 
-    <div class="collapse navbar-collapse">
-        {% if user.is_authenticated %}
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'teacherportal-home' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'today_schedule' %}">Today schedule</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>
-                </li>
-            </ul>
-        {% else %}
-            <div class="mr-auto"></div>
-        {% endif %}
-        {% if user.is_authenticated %}
-            <a href="{% url 'teacher' %}" class="nav-link navbar-btn pull-right"> Profile</a>
-            <a href="{% url 'logout' %}" class="nav-link navbar-btn pull-right"> Log out</a>
-        {% else %}
-            <a href="{% url 'login' %}" class="nav-link navbar-btn pull-right"> Login</a>
-            <a href="{% url 'register' %}" class="nav-link navbar-btn pull-right"> Register</a>
-        {% endif %}
+        <div class="collapse navbar-collapse">
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav mr-auto">
+                {% with url_name=request.resolver_match.url_name %}
+                    <li class="nav-item {% if url_name == 'teacherportal-home' %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'teacherportal-home' %}">Home</a>
+                    </li>
+                    <li class="nav-item {% if url_name == 'today_schedule' %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'today_schedule' %}">Today schedule</a>
+                    </li>
+                    <li class="nav-item {% if url_name == 'schedule' %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>
+                    </li>
+                {% endwith %}
+                </ul>
+            {% else %}
+                <div class="mr-auto"></div>
+            {% endif %}
+            {% if user.is_authenticated %}
+                <a href="{% url 'teacher' %}" class="nav-link navbar-btn pull-right"> Profile</a>
+                <a href="{% url 'logout' %}" class="nav-link navbar-btn pull-right"> Log out</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="nav-link navbar-btn pull-right"> Login</a>
+                <a href="{% url 'register' %}" class="nav-link navbar-btn pull-right"> Register</a>
+            {% endif %}
 
+        </div>
     </div>
 </nav>
-
 <div id="content">
     {% if messages %}
         {% for message in messages %}
@@ -65,7 +68,9 @@
             </div>
         {% endfor %}
     {% endif %}
-    {% block content %}{% endblock %}
+    <div class="container mt-5  ">
+        {% block content %}{% endblock %}
+    </div>
 </div>
 
 
