--- a/TeacherPortal/templates/teacherportal/attendance_summary.html
+++ b/TeacherPortal/templates/teacherportal/attendance_summary.html
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="pb-5">
             <input id="SetAttendance" class="btn btn-outline-info" type="submit" value="Set attendance">
         </div>
         <table class="table table-hover">
