--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -7,7 +7,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="{% static 'teacherportal/teacherportal.css' %}">
-
+    <link rel='stylesheet' type="text/css" href="{% static 'teacherportal/fullcalendar.min.css' %}"/>
     {% if title %}
         <title>Teacher Portal - {{ title }}</title>
     {% else %}
@@ -22,6 +22,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <script src='{% static 'teacherportal/moment.min.js' %}'></script>
+    <script src='{% static 'teacherportal/fullcalendar.min.js' %}'></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
