--- a/TeacherPortal/templates/teacherportal/today_schedule.html
+++ b/TeacherPortal/templates/teacherportal/today_schedule.html
@@ -1,39 +1,37 @@
 {% extends "teacherportal/base.html" %}
 
 {% block content %}
-    <div class="col-12">
         <div class="pb-5">
             <h3>Hi {{ user.username }}, you have {{ schedules|length }} college{% if schedules|length > 1 %}s{% endif %} today</h3>
         </div>
 
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th>Room</th>
-                <th>Date</th>
-                <th>Begin time</th>
-                <th>End time</th>
-                <th>College</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for schedule in schedules %}
-                <tr class='clickable-row' id="{{ schedule.id }}">
-                    <td>{{ schedule.room }}</td>
-                    <td>{{ schedule.day }}</td>
-                    <td>{{ schedule.begin_time }}</td>
-                    <td>{{ schedule.end_time }}</td>
-                    <td>{{ schedule.course.name }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <script>
+{#        <table class="table table-hover">#}
+{#            <thead>#}
+{#            <tr>#}
+{#                <th>Room</th>#}
+{#                <th>Date</th>#}
+{#                <th>Begin time</th>#}
+{#                <th>End time</th>#}
+{#                <th>College</th>#}
+{#            </tr>#}
+{#            </thead>#}
+{#            <tbody>#}
+{#            {% for schedule in schedules %}#}
+{#                <tr class='clickable-row' id="{{ schedule.id }}">#}
+{#                    <td>{{ schedule.room }}</td>#}
+{#                    <td>{{ schedule.day }}</td>#}
+{#                    <td>{{ schedule.begin_time }}</td>#}
+{#                    <td>{{ schedule.end_time }}</td>#}
+{#                    <td>{{ schedule.course.name }}</td>#}
+{#                </tr>#}
+{#            {% endfor %}#}
+{#            </tbody>#}
+{#        </table>#}
+        {% include 'teacherportal/includes/schedule.html' %}
+        <script>
         $(".clickable-row").click(function () {
             courseId = $(this).closest('tr').attr('id');
             window.location = "{{ BASE_URL_W_TRAILING_SLASH  }}teacherportal/attendance_summary/"+ courseId + "/";
         });
-    </script>
+        </script>
 {% endblock %}
