--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'teacherportal/teacherportal.css' %}">
-    <link rel='stylesheet' type="text/css" href="{% static 'teacherportal/fullcalendar.min.css' %}"/>
+
     {% if title %}
         <title>Teacher Portal - {{ title }}</title>
     {% else %}
         <title>Teacher Portal</title>
     {% endif %}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -24,6 +24,8 @@
             crossorigin="anonymous"></script>
     <script src='{% static 'teacherportal/moment.min.js' %}'></script>
     <script src='{% static 'teacherportal/fullcalendar.min.js' %}'></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'teacherportal/teacherportal.css' %}">
+    <link rel='stylesheet' type="text/css" href="{% static 'teacherportal/fullcalendar.min.css' %}"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
