--- a/TeacherPortal/templates/teacherportal/includes/schedule.html
+++ b/TeacherPortal/templates/teacherportal/includes/schedule.html
@@ -2,32 +2,50 @@
 
 </div>
 <script>
+var TODAY = moment();
+let schedules = ({{ schedules|safe }});
+let events = [];
+
 $(function() {
-    let schedules = ({{ schedules|safe }});
-    let events = [];
+
+
     for (i = 0; i < schedules.length; i++) {
         schedule = schedules[i]
-        events[i] = {
-            'title': schedule.course.name,
-            'start': schedule.day + 'T' + schedule.begin_time,
-            'end': schedule.day + 'T' + schedule.end_time,
-            'href': '{{ BASE_URL_W_TRAILING_SLASH  }}teacherportal/attendance_summary/' + schedule['id'] + '/'
+        let reference_day = moment(schedule.day);
+        event_today = isToday(reference_day);
+        if (event_today) {
+            events[i] = {
+                'title': schedule.course.name,
+                'start': schedule.day + 'T' + schedule.begin_time,
+                'end': schedule.day + 'T' + schedule.end_time,
+                'url': '{{ BASE_URL_W_TRAILING_SLASH  }}teacherportal/attendance_summary/' + schedule['id'] + '/',
+                'className': 'enabled-event'
+            }
+        } else {
+            events[i] = {
+                'title': schedule.course.name,
+                'start': schedule.day + 'T' + schedule.begin_time,
+                'end': schedule.day + 'T' + schedule.end_time,
+                'className': 'disabled-event'
+            }
         }
+
     }
     // page is now ready, initialize the calendar...
 
     $('#calendar').fullCalendar({
         'weekends': false,
-        'defaultView': 'agendaWeek',
+        'defaultView': {% if today is True %} 'agendaDay' {% else %} 'agendaWeek' {% endif %},
         'minTime': '08:00:00',
         'maxTime': '18:00:00',
         'height': 'auto',
         'slotLabelFormat': 'HH:mm',
-        'events': events,
-        eventClick: function(calEvent, jsEvent, view) {
-            window.location = calEvent.href;
-        }
+        'events': events
     })
 
 });
+
+function isToday(momentDate) {
+    return momentDate.isSame(TODAY, 'd');
+}
 </script>
