--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -39,9 +39,9 @@
                     <li class="nav-item {% if url_name == 'teacherportal-home' %}active{% endif %}">
                         <a class="nav-link" href="{% url 'teacherportal-home' %}">Home</a>
                     </li>
-                    <li class="nav-item {% if url_name == 'today_schedule' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'today_schedule' %}">Today schedule</a>
-                    </li>
+{#                    <li class="nav-item {% if url_name == 'today_schedule' %}active{% endif %}">#}
+{#                        <a class="nav-link" href="{% url 'today_schedule' %}">Today schedule</a>#}
+{#                    </li>#}
                     <li class="nav-item {% if url_name == 'schedule' %}active{% endif %}">
                         <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>
                     </li>
