--- a/TeacherPortal/static/teacherportal/teacherportal.css
+++ b/TeacherPortal/static/teacherportal/teacherportal.css
@@ -2,3 +2,17 @@
     transition: background-color 0.5s linear;
     background-color: #89CFF0 !important;
 }
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    margin-left: 13%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
