--- a/TeacherPortal/templates/teacherportal/includes/schedule.html
+++ b/TeacherPortal/templates/teacherportal/includes/schedule.html
@@ -1,38 +1,27 @@
+<div class="row" id="loader">
+    <div class="col-md-2 offset-md-5 text-center">
+        <p>Loading schedules</p>
+        <div class="loader">
+
+        </div>
+    </div>
+</div>
+
 <div id='calendar'>
 
 </div>
 <script>
 var TODAY = moment();
-let schedules = ({{ schedules|safe }});
-let events = [];
-
+let schedules;
 $(function() {
+    initCalendar()
+});
 
+function isToday(momentDate) {
+    return momentDate.isSame(TODAY, 'd');
+}
 
-    for (i = 0; i < schedules.length; i++) {
-        schedule = schedules[i]
-        let reference_day = moment(schedule.day);
-        event_today = isToday(reference_day);
-        if (event_today) {
-            events[i] = {
-                'title': schedule.course.name,
-                'start': schedule.day + 'T' + schedule.begin_time,
-                'end': schedule.day + 'T' + schedule.end_time,
-                'url': '{{ BASE_URL_W_TRAILING_SLASH  }}teacherportal/attendance_summary/' + schedule['id'] + '/',
-                'className': 'enabled-event'
-            }
-        } else {
-            events[i] = {
-                'title': schedule.course.name,
-                'start': schedule.day + 'T' + schedule.begin_time,
-                'end': schedule.day + 'T' + schedule.end_time,
-                'className': 'disabled-event'
-            }
-        }
-
-    }
-    // page is now ready, initialize the calendar...
-
+function initCalendar() {
     $('#calendar').fullCalendar({
         'weekends': false,
         'defaultView': {% if today is True %} 'agendaDay' {% else %} 'agendaWeek' {% endif %},
@@ -40,12 +29,46 @@ $(function() {
         'maxTime': '18:00:00',
         'height': 'auto',
         'slotLabelFormat': 'HH:mm',
-        'events': events
+        'events': function(start, end, timezone, callback) {
+            $.ajax({
+              url: '{{ API_URL }}Schedules/' + {{ user.teacher.id }},
+                beforeSend: function(xhr){xhr.setRequestHeader('Authorization', 'token {{ API_TOKEN }}');},
+              success: function(data) {
+                var events = [];
+
+                schedules = data;
+                for (i = 0; i < schedules.length; i++) {
+                    schedule = schedules[i]
+                    let reference_day = moment(schedule.day);
+                    event_today = isToday(reference_day);
+                    if (event_today) {
+                        events[i] = {
+                            'title': schedule.course.name,
+                            'start': schedule.day + 'T' + schedule.begin_time,
+                            'end': schedule.day + 'T' + schedule.end_time,
+                            'url': '{{ BASE_URL_W_TRAILING_SLASH  }}teacherportal/attendance_summary/' + schedule['id'] + '/',
+                            'className': 'enabled-event'
+                        }
+                    } else {
+                        events[i] = {
+                            'title': schedule.course.name,
+                            'start': schedule.day + 'T' + schedule.begin_time,
+                            'end': schedule.day + 'T' + schedule.end_time,
+                            'className': 'disabled-event'
+                        }
+                    }
+                }
+                callback(events);
+              }
+            });
+        },
+        loading: function(isLoading, view) {
+            if (isLoading) {
+                $('#loader').show();
+            } else {
+                $('#loader').hide();
+            }
+        },
     })
-
-});
-
-function isToday(momentDate) {
-    return momentDate.isSame(TODAY, 'd');
 }
 </script>
