--- a/TeacherPortal/templates/teacherportal/schedule.html
+++ b/TeacherPortal/templates/teacherportal/schedule.html
@@ -1,42 +1,8 @@
 {% extends "teacherportal/base.html" %}
 
 {% block content %}
-{#    </div>#}
-{#        <table class="table">#}
-{#            <thead>#}
-{#            <tr>#}
-{#                <th>Room</th>#}
-{#                <th>Date</th>#}
-{#                <th>Begin time</th>#}
-{#                <th>End time</th>#}
-{#                <th>College</th>#}
-{#            </tr>#}
-{#            </thead>#}
-{#            <tbody>#}
-{#            {% for schedule in schedules %}#}
-{#                <tr>#}
-{#                    <td>{{ schedule.room }}</td>#}
-{#                    <td>{{ schedule.day }}</td>#}
-{#                    <td>{{ schedule.begin_time }}</td>#}
-{#                    <td>{{ schedule.end_time }}</td>#}
-{#                    <td>{{ schedule.course.name }}</td>#}
-{#                </tr>#}
-{#            {% empty %}#}
-{#                <tr>#}
-{#                    <th colspan="5">There are no colleges</th>#}
-{#                </tr>#}
-{#            {% endfor %}#}
-{#            </tbody>#}
-{#        </table>#}
-{#        <div class="col-12">#}
-{#            {% if previous %}#}
-{#                <a class="btn btn-info btn-sm" href="/teacherportal/schedule/?page={{ previous }}">Previous</a>#}
-{#            {% endif %}#}
-{#            {% if next %}#}
-{#                <a class="btn btn-info btn-sm" href="/teacherportal/schedule/?page={{ next }}">Next</a>#}
-{#            {% endif %}#}
-{##}
-{#        </div>#}
-{#    </div>#}
+    <div class="pb-5">
+        <h3>Welcome, {{ user.username }}.</h3>
+    </div>
     {% include 'teacherportal/includes/schedule.html' %}
 {% endblock %}
