--- a/TeacherPortal/templates/teacherportal/attendance_summary.html
+++ b/TeacherPortal/templates/teacherportal/attendance_summary.html
@@ -41,15 +41,15 @@
             <tbody class="tbodyAttend">
             {% for attendee in attendances %}
                 {% if attendee.card_check and attendee.phone_check %}
-                    <tr class="table-success">
-                        <td>{{ attendee.student.student_nr }}</td>
+                    <tr class="table-success" id="{{ attendee.student.student_nr }}">
+                        <td id="studentNumber">{{ attendee.student.student_nr }}</td>
                         <td>{{ attendee.student.name }}</td>
                         <td>{{ attendee.phone_check }}</td>
                         <td>{{ attendee.card_check }}</td>
                         <td><i class="fas fa-check"></i></td>
                         <td>
-                            <button disabled="true" type="button" class="btn btn-outline-primary btn-sm attend">
-                                Set present
+                            <button type="button" class="btn btn-danger btn-sm attend button-attendance">
+                                Set unpresent
                             </button>
                         </td>
                     </tr>
@@ -61,7 +61,7 @@
                         <td>{{ attendee.card_check }}</td>
                         <td><i class="fas fa-times"></i></td>
                         <td>
-                            <button type="button" class="btn btn-outline-primary btn-sm attend">
+                            <button type="button" class="btn btn-success btn-sm attend button-attendance">
                                 Set present
                             </button>
                         </td>
