--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -6,18 +6,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/feather-icons"></script>
     {% if title %}
         <title>Teacher Portal - {{ title }}</title>
     {% else %}
         <title>Teacher Portal</title>
     {% endif %}
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
@@ -28,55 +30,146 @@
     <link rel='stylesheet' type="text/css" href="{% static 'teacherportal/fullcalendar.min.css' %}"/>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'teacherportal-home' %}">Teacher portal</a>
-
-        <div class="collapse navbar-collapse">
-            {% if user.is_authenticated %}
-                <ul class="navbar-nav mr-auto">
-                {% with url_name=request.resolver_match.url_name %}
-                    <li class="nav-item {% if url_name == 'teacherportal-home' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'teacherportal-home' %}">Home</a>
-                    </li>
+{#<nav class="navbar navbar-expand-lg navbar-light bg-light">#}
+{#    <div class="container-fluid">#}
+{#        <a class="navbar-brand" href="{% url 'teacherportal-home' %}">Teacher portal</a>#}
+{##}
+{#        <div class="collapse navbar-collapse">#}
+{#            {% if user.is_authenticated %}#}
+{#                <ul class="navbar-nav mr-auto">#}
+{#                {% with url_name=request.resolver_match.url_name %}#}
+{#                    <li class="nav-item {% if url_name == 'teacherportal-home' %}active{% endif %}">#}
+{#                        <a class="nav-link" href="{% url 'teacherportal-home' %}">Home</a>#}
+{#                    </li>#}
 {#                    <li class="nav-item {% if url_name == 'today_schedule' %}active{% endif %}">#}
 {#                        <a class="nav-link" href="{% url 'today_schedule' %}">Today schedule</a>#}
 {#                    </li>#}
-                    <li class="nav-item {% if url_name == 'schedule' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>
-                    </li>
-                {% endwith %}
-                </ul>
-            {% else %}
-                <div class="mr-auto"></div>
-            {% endif %}
-            {% if user.is_authenticated %}
-                <a href="{% url 'teacher' %}" class="nav-link navbar-btn pull-right"> Profile</a>
-                <a href="{% url 'logout' %}" class="nav-link navbar-btn pull-right"> Log out</a>
-            {% else %}
-                <a href="{% url 'login' %}" class="nav-link navbar-btn pull-right"> Login</a>
-                <a href="{% url 'register' %}" class="nav-link navbar-btn pull-right"> Register</a>
-            {% endif %}
-
-        </div>
-    </div>
-</nav>
-<div id="content">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                {{ message }}
-            </div>
-        {% endfor %}
+{#                    <li class="nav-item {% if url_name == 'schedule' %}active{% endif %}">#}
+{#                        <a class="nav-link" href="{% url 'schedule' %}">Schedule</a>#}
+{#                    </li>#}
+{#                {% endwith %}#}
+{#                </ul>#}
+{#            {% else %}#}
+{#                <div class="mr-auto"></div>#}
+{#            {% endif %}#}
+{#            {% if user.is_authenticated %}#}
+{#                <a href="{% url 'teacher' %}" class="nav-link navbar-btn pull-right"> Profile</a>#}
+{#                <a href="{% url 'logout' %}" class="nav-link navbar-btn pull-right"> Log out</a>#}
+{#            {% else %}#}
+{#                <a href="{% url 'login' %}" class="nav-link navbar-btn pull-right"> Login</a>#}
+{#                <a href="{% url 'register' %}" class="nav-link navbar-btn pull-right"> Register</a>#}
+{#            {% endif %}#}
+{##}
+{#        </div>#}
+{#    </div>#}
+{#</nav>#}
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow" style="height: 50px">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{% url 'schedule' %}">Teacher portal</a>
+    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+    {% if user.is_authenticated %}
+        <a href="{% url 'teacher' %}" class="nav-link navbar-btn pull-right"> Profile</a>
+        <a href="{% url 'logout' %}" class="nav-link navbar-btn pull-right"> Log out</a>
+    {% else %}
+        <a href="{% url 'login' %}" class="nav-link navbar-btn pull-right"> Login</a>
+        <a href="{% url 'register' %}" class="nav-link navbar-btn pull-right"> Register</a>
     {% endif %}
-    <div class="container mt-5  ">
-        {% block content %}{% endblock %}
-    </div>
-</div>
+</nav>
 
+<div class="container-fluid">
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <div class="sidebar-sticky">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">
+                        <span data-feather="home"></span>
+                        Dashboard <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="file"></span>
+                        Orders
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="shopping-cart"></span>
+                        Products
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="users"></span>
+                        Customers
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="bar-chart-2"></span>
+                        Reports
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="layers"></span>
+                        Integrations
+                    </a>
+                </li>
+            </ul>
 
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                <span>Saved reports</span>
+                <a class="d-flex align-items-center text-muted" href="#">
+                    <span data-feather="plus-circle"></span>
+                </a>
+            </h6>
+            <ul class="nav flex-column mb-2">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="file-text"></span>
+                        Current month
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="file-text"></span>
+                        Last quarter
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="file-text"></span>
+                        Social engagement
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <span data-feather="file-text"></span>
+                        Year-end sale
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div id="content">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <div class="mt-5 col-md-9 ml-sm-auto col-lg-10 px-4">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+    </main>
+    <script>
+        feather.replace()
+    </script>
 </body>
 </html>
