--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,16 +1,16 @@
 {% extends "teacherportal/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-        <div class="container">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log in</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Log in</button>
-            </div>
-        </form>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h3>Log in</h3>
     </div>
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            {{ form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Log in</button>
+        </div>
+    </form>
 {% endblock %}
