--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,10 +1,8 @@
 {% extends "teacherportal/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="col-12">
-        <h2>You have been logged out</h2>
-    <div class="border-top pt-3">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h3>You have been logged out</h3>
+    </div>
     <a href="{% url 'login' %}">Sign in</a>
-    </div>
-    </div>
 {% endblock %}
