--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,12 +2,13 @@
 {% load crispy_forms_tags %}
 {% block title %}Register {% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h3>Register teacher account</h3>
+    </div>
         <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Register teacher account</legend>
                 {{ form|crispy }}
                 {{ form_teacher|crispy }}
             </fieldset>
@@ -15,6 +16,5 @@
                 <button class="btn btn-outline-info" type="submit">Register</button>
             </div>
         </form>
-    </div>
     </div>
 {% endblock %}
