--- a/TeacherPortal/templates/teacherportal/attendance_summary.html
+++ b/TeacherPortal/templates/teacherportal/attendance_summary.html
@@ -31,6 +31,7 @@
                 <th>Phone check</th>
                 <th>Card check</th>
                 <th>Present</th>
+                <th>Course stats </br> (present/total)</th>
                 <th></th>
             </tr>
             </thead>
@@ -43,6 +44,11 @@
                         <td>{{ attendee.phone_check }}</td>
                         <td>{{ attendee.card_check }}</td>
                         <td><i class="fas fa-check"></i></td>
+                        {% if attendee.course_stats %}
+                            <td>{{ attendee.course_stats.present }}/{{ attendee.course_stats.total }}</td>
+                        {% else %}
+                            <td><i>No data</i></td>
+                        {% endif %}
                         <td>
                             <button type="button" class="btn btn-danger btn-sm attend button-attendance" data-student-name="{{ attendee.student.name }}">
                                 Set not present
@@ -56,6 +62,11 @@
                         <td>{{ attendee.phone_check }}</td>
                         <td>{{ attendee.card_check }}</td>
                         <td><i class="fas fa-times"></i></td>
+                        {% if attendee.course_stats %}
+                            <td>{{ attendee.course_stats.present }}/{{ attendee.course_stats.total }}</td>
+                        {% else %}
+                            <td><i>No data</i></td>
+                        {% endif %}
                         <td>
                             <button type="button" class="btn btn-success btn-sm attend button-attendance" data-student-name="{{ attendee.student.name }}">
                                 Set present
