--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -80,7 +80,7 @@
         <div class="sidebar-sticky">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'schedule' %}">
+                    <a class="nav-link" href="{% url 'schedule' %}">
                         <span data-feather="home"></span>
                         Schedule <span class="sr-only">(current)</span>
                     </a>
@@ -88,7 +88,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'stats' %}">
                         <span data-feather="bar-chart-2"></span>
-                        Reports
+                        Course stats
                     </a>
                 </li>
             </ul>
