--- a/TeacherPortal/templates/teacherportal/base.html
+++ b/TeacherPortal/templates/teacherportal/base.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/feather-icons"></script>
+
     {% if title %}
         <title>Teacher Portal - {{ title }}</title>
     {% else %}
@@ -26,6 +27,7 @@
             crossorigin="anonymous"></script>
     <script src='{% static 'teacherportal/moment.min.js' %}'></script>
     <script src='{% static 'teacherportal/fullcalendar.min.js' %}'></script>
+    <script src='{% static 'teacherportal/Chart.js' %}'></script>
     <link rel="stylesheet" type="text/css" href="{% static 'teacherportal/teacherportal.css' %}">
     <link rel='stylesheet' type="text/css" href="{% static 'teacherportal/fullcalendar.min.css' %}"/>
 </head>
