--- a/TeacherPortal/templates/teacherportal/includes/course_stats.html
+++ b/TeacherPortal/templates/teacherportal/includes/course_stats.html
@@ -15,11 +15,9 @@
             options: {
                 responsive: true,
                 tooltips: {
-                    intersect: false,
-                    titleFontSize: 20,
-                    bodyFontSize: 20,
-                    titleFontColor: '#000000',
-                    bodyFontColor: '#000000'
+                    xPadding: 50,
+                    yPadding: 50,
+                    intersect: false
                 },
                 title:{
                   display:true,
