--- a/TeacherPortal/templates/teacherportal/courses.overview.html
+++ b/TeacherPortal/templates/teacherportal/courses.overview.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-        <h3>Courses of {{ user.username }}.</h3>g
+        <h3>Courses of {{ user.username }}.</h3>
     </div>
     {% include 'teacherportal/includes/courses_overview.html' %}
 {% endblock %}
