--- a/TeacherPortal/templates/teacherportal/includes/course_stats.html
+++ b/TeacherPortal/templates/teacherportal/includes/course_stats.html
@@ -8,7 +8,7 @@
             type: 'line',
             data: {
                 datasets: [{
-                    label: 'Presentness',
+                    label: 'Presence',
                     data: data
                 }]
             },
@@ -19,7 +19,7 @@
                 },
                 title:{
                   display:true,
-                  text:'Course presentness'
+                  text:'Course presence'
                 },
                 bezierCurve: false,
                 scales: {
