--- a/TeacherPortal/templates/teacherportal/course.stats.html
+++ b/TeacherPortal/templates/teacherportal/course.stats.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-md-12 text-center pt-3">
-            <h3>Presentness of course '{{ course_stats.0.name }}'</h3>
+            <h3>Presence of course '{{ course_stats.0.name }}'</h3>
             <h5>Total students in this course: {{ course_stats.0.course_stats.total_attendees }}</h5>
         </div>
     </div>
